# itmo

./: .gitignore  .gitmodules  README.md
algo/dz/tree/: 23_tree.cpp  TaskF.cpp  simple_tree.cpp  treap.cpp  treap_without_key.cpp  tree.sln  tree.vcxproj  tree.vcxproj.filters
asm/lecs/: allignment.txt  constructions.txt  fpu.txt  main_commands.txt  optimizations.txt  processor_type_working.txt  simd.txt  x64.tzt
asm/prep/: exam_topics.txt  theory.txt
comp_geom/lab/: CMakeLists.txt  area.cpp  distance.cpp  inside.cpp  inside_non_convex.cpp  min_dist.cpp  nearest_point.cpp  plane_inter.cpp  quickhull.cpp  triangulation.cpp  watchtowers.cpp
comp_geom/lab1/: a_plus_b  a_plus_b.cpp  lab1.sln  lab1.vcxproj  lab1.vcxproj.filters  quickhull  quickhull.cpp  segm_inter  segm_inter.cpp  tests.h
cpp/2sem/bigint_opt/: CMakeLists.txt  additions.cpp  arithmetic.cpp  big_integer.h  constructors.cpp  infix.cpp  logical.cpp  main.cpp  shifts.cpp
cpp/2sem/bigint_opt/vector/: my_vector.cpp  my_vector.h
cpp/2sem/huffman_cmake/: CMakeLists.txt  bits_seq.cpp  bits_seq.h  decoder.cpp  encoder.cpp  freq_tree.cpp  freq_tree.h  huffman_cod.h  main.cpp  orwell.txt
cpp/3sem/persistent_set/: CMakeLists.txt  linked_ptr.h  pers_set.h  shared_ptr.h  test.cpp
da/avtomats/: check_dka.cpp  check_nka.cpp  count_l_nka.cpp  count_words.cpp  count_words_1.cpp  lab_avtomats.sln  lab_avtomats.vcxproj
da/comb/: brackets2.cpp  lab2.vcxproj  lab2.vcxproj.filters
da/gen_functions/: constr_classes.cpp  lab_gen_functions.vcxproj  operations_tmp.cpp  random_numbers.cpp  tree_without_corb.cpp  trees.cpp
da/hameltonian/: fairy_tail.cpp  fullham.cpp  guyaury.cpp  lab_hameltonian.vcxproj  lab_hameltonian.vcxproj.filters
da/ks/: b.cpp  isomorphism.cpp  main.cpp
da/lab_avtomats/: b.java  count_l_dka.cpp  lab_avtomats.vcxproj.filters
da/lab_comb/: brackets.cpp  lab2.sln  template.cpp
da/lab_gen_functions/: lab_gen_functions.sln  lab_gen_functions.vcxproj  lab_gen_functions.vcxproj.filters  operations.cpp
da/lab_hameltonian/: chvatal.cpp  guyaury1.cpp  lab_hameltonian.sln
da/lab_ks/: CMakeLists.txt  a.cpp  d.cpp  e.cpp  equivalence.cpp  minimalize_n2.cpp  task_c.cpp
da/lab_matroids/: check.cpp  cycles.cpp  matching.cpp  matroids.vcxproj.filters
da/lab_planar/: area.cpp  planar.cpp
da/lab_teor_ver/: a.java  exam.cpp  lab_teor_ver.vcxproj  template.cpp
da/lab_turing/: aplusb.cpp  convertto2.cpp  lab_turing.vcxproj  lab_turing.vcxproj.filters  mirror.cpp  postfixlogic.cpp
da/matroids/: destroy.cpp  matroids.sln  matroids.vcxproj  schedule.cpp
da/planar/: lab_planar.sln  lab_planar.vcxproj  lab_planar.vcxproj.filters
da/teor_ver/: absmarkchain.cpp  lab_teor_ver.sln  lab_teor_ver.vcxproj.filters  lottery.cpp  markchain.cpp  markchain1.cpp  markchain2.cpp  shooter.cpp
da/turing/: balanced.cpp  lab_turing.sln  less.cpp  reverse.cpp  zero.cpp
java/: homeworks.html
matlog/hw1/: Makefile  output.txt
matlog/hw2/: Makefile
matlog/hw3/: Makefile  input.txt  output.txt
matlog/hw4/: Makefile  input.txt  output.txt
ml/cf/: CMakeLists.txt  bayes.cpp  cond_dispersion.cpp  cond_entropy.cpp  decision_tree.cpp  distance.cpp  hi_2.cpp  linear.cpp  logic_expr.cpp  matrix_function.cpp  matstat.cpp  svm.cpp
ml_socio/sentimental/: main.py  pyproject.toml  task.ipynb
ml_socio/sentimental/data/: emnlp_dict.csv
mt/lab1/: 1_1.perl  1_10.perl  1_11.perl  1_2.perl  1_3.perl  1_4.perl  1_5.perl  1_8.perl  1_9.perl  2.perl  3_12.perl  3_3.perl  input.txt
mt/lab2/: main.cpp  simple_gramatic.sln  simple_gramatic.vcxproj
mt/lab3/: a.cpp  pom.xml
os/hws/: shell  shell.cpp
os/lectures/: dns.txt  general.txt  ipc.txt  plan.txt  profiling.txt  servers.txt  telnet.txt
paradigms/: README.md  homeworks.html
ppo/: labs.docx
ppo/actor/: pom.xml
ppo/exchanger/: pom.xml
ppo/fitness_center/: .env  README.md  pyproject.toml
ppo/fitness_center/sql/: db_schema.sql
ppo/fitness_center/src/common/: clock.py  db_driver.py  handler.py  requests.py
ppo/fitness_center/src/manager/: db_driver.py  db_objects.py  handler.py  requests.py  server.py
ppo/fitness_center/src/report/: db_driver.py  handler.py  requests.py  server.py
ppo/fitness_center/src/turnstile/: db_driver.py  db_objects.py  handler.py  requests.py  server.py
ppo/fitness_center/test/common/: test_db_driver.py
ppo/fitness_center/test/manager/: test_handler.py
ppo/fitness_center/test/report/: test_db_driver.py
ppo/fitness_center/test/turnstile/: test_db_driver.py  test_handler.py
ppo/lab1/: CMakeLists.txt
ppo/lab1/include/lru_cache/: lru_cache.h
ppo/lab1/test/: lru_cache.cpp
ppo/lab2/: main.py  pyproject.toml
ppo/lab2/src/vk_client/: abstractclient.py  httpx_client.py
ppo/lab2/test/: test_httpx_methods.py
ppo/lab3/: pom.xml
ppo/lab4/: pyproject.toml
ppo/lab4/src/controller/: TodoListController.py  todo_list_controller.py
ppo/lab4/src/model/: ModelObjects.py  TodoListDao.py  TodoListSqliteDao.py  todo_list_dao.py  todo_list_sqlite_dao.py
ppo/lab4/src/view/: TodoListViewer.py
ppo/lab4/templates/: index.html
ppo/lab4/test/model/: test_todo_list_sqlite_dao.py
ppo/lab5/: list.graph  main.py  matrix.graph  pyproject.toml
ppo/lab5/src/apps/: pygame_app.py  pyglet_app.py
ppo/lab5/src/draw/: drawing_api.py  objects.py  pygame_api.py  pyglet_api.py
ppo/lab5/src/graph/: abstract_graph.py  list_graph.py  matrix_graph.py
ppo/lab6/: main.py  pyproject.toml
ppo/lab6/src/tokenizer/: tokenizer.py  tokens.py
ppo/lab6/src/visitor/: calc_visitor.py  print_visitor.py  rpn_visitor.py  visitor.py
ppo/lab6/test/tokenizer/: test_tokenizer.py
ppo/lab6/test/visitor/: test_calc.py  test_rpn.py
ppo/lab8/: main.py
ppo/products_list/: pom.xml
shalyto/shalyto_lab/: CMakeLists.txt  artificial.cpp  crossover.cpp  discrete.cpp  inter_minim.cpp  mutation.cpp  start.cpp  trees.cpp
teor_inf/: CMakeLists.txt  borrow_uiller.cpp
type_theory/hw1/: Makefile  data.ml  main.ml  parser.mly
type_theory/hw2/: Makefile  data.ml  input.txt  lexer.mll  main.ml  output.txt  parser.mly
type_theory/hw3/: Makefile  data.ml  main.ml
(+522 files in other folders)
