cmake_minimum_required(VERSION 3.7)
project(lab_ks)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES main.cpp)
#set (CMAKE_CXX_FLAGS_DEBUG "-D NDEBUG")

#add_executable(template main.cpp)
#add_executable(a a.cpp)
#add_executable(b b.cpp)
#add_executable(c task_c.cpp)
add_executable(d d.cpp)
#add_executable(e e.cpp)
#add_executable(1 isomorphism.cpp)
#add_executable(equivalence equivalence.cpp)
add_executable(minim_n2 minimalize_n2.cpp)

