[tool.poetry]
name = "sentimental"
version = "0.1.0"
description = ""
authors = ["Evgeniy Feder <dzaba67@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
nltk = "^3.5"
jupyter = "^1.0.0"
pandas = "^1.1.3"
pandarallel = "^1.5.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
