[tool.poetry]
name = "lab2"
version = "0.1.0"
description = "2 lab of PPO ITMO course"
authors = ["Evgeniy Feder <dzaba67@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.9.5"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
fastapi = "^0.45.0"
pytest-asyncio = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
