[tool.poetry]
name = "lab4"
version = "0.1.0"
description = ""
authors = ["Evgeniy Feder <dzaba67@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.11.1"
attrs = "^19.3.0"
fastapi = "^0.47.1"
jinja2 = "^2.10.3"
typesystem = "^0.2.4"
uvicorn = "^0.11.2"
aiofiles = "^0.4.0"
bootstrap4 = "^0.1.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
