tool.poetry]
name = "lab5"
version = "0.1.0"
description = ""
authors = ["Evgeniy Feder <dzaba67@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
pygame = "^1.9.6"
pyglet = "^1.4.9"
attrs = "^19.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
